feat: batch remote RAG embeddings